--- a/Models/CodecLM/2023.01.05_VALL-E.md
+++ b/Models/CodecLM/2023.01.05_VALL-E.md
@@ -990,7 +990,7 @@ We will also put [Microsoft AI Principles](https://www.microsoft.com/ai/responsi
 [^Chowdhery2022PaLM]: [**PaLM**: Scaling Language Modeling with Pathways](../TextLM/2022.04.05_PaLM.md). ArXiv:2204.02311v5.
 [^Devlin2018BERT]: [**BERT**: Pre-training of Deep Bidirectional Transformers for Language Understanding](../TextLM/2018.10.11_BERT.md). ArXiv:1810.04805v2/NAACL2019.
 [^Liu2019RoBERTa]: [**RoBERTa**: A Robustly Optimized BERT Pretraining Approach](../TextLM/2019.07.26_RoBERTa.md). ArXiv:1907.11692v1.
-[^Defossez2022EnCodec]: [**EnCodec**: High Fidelity Neural Audio Compression](../Tokenizers/2022.10.24_EnCodec.md). ArXiv:2210.13438/TMLR2023.
+[^Defossez2022EnCodec]: [**EnCodec**: High Fidelity Neural Audio Compression](../Codec/2022.10.24_EnCodec.md). ArXiv:2210.13438/TMLR2023.
 [^Kahn2019Libri-Light]: [**Libri-Light**: A Benchmark for ASR with Limited or No Supervision](../../Datasets/2019.12.17_Libri-Light.md). ArXiv:1912.07875v1/ICASSP2020.
 [^Zen2019LibriTTS]: [**LibriTTS**: A Corpus Derived from LibriSpeech for Text-to-Speech](../../Datasets/2019.04.05_LibriTTS.md). ArXiv:1904.02882v1/InterSpeech2019.
 [^Panayotov2015LibriSpeech]: [**LibriSpeech**: An ASR Corpus Based on Public Domain Audio Books](../../Datasets/2015.04.19_LibriSpeech.md). IEEE@ICASSP2015.
@@ -1011,7 +1011,7 @@ We will also put [Microsoft AI Principles](https://www.microsoft.com/ai/responsi
 [^Lakhotia2021GSLM]: [**GSLM**: On Generative Spoken Language Modeling from Raw Audio](../SpeechLM/PureSpeechLM/2021.02.01_GSLM.md). ArXiv:2102.01192v2/TACL2021.
 [^Borsos2022AudioLM]: [**AudioLM**: A Language Modeling Approach to Audio Generation](../SpeechLM/PureSpeechLM/2022.09.07_AudioLM.md). ArXiv:2209.03143v2/TASLP2023.
 [^Polyak2021Speech]: [Speech Resynthesis from Discrete Disentangled Self-Supervised Representations](../Tokenizers/2021.04.01_Resynthesis.md). ArXiv:2104.00355/InterSpeech2021.
-[^Zeghidour2021SoundStream]: [**SoundStream**: An End-to-End Neural Audio Codec](../Tokenizers/2021.07.07_SoundStream.md). ArXiv:2107.03312v1/TASLP2021.
+[^Zeghidour2021SoundStream]: [**SoundStream**: An End-to-End Neural Audio Codec](../Codec/2021.07.07_SoundStream.md). ArXiv:2107.03312v1/TASLP2021.
 [^Kong2020HiFi-GAN]: [**HiFi-GAN**: Generative Adversarial Networks for Efficient and High Fidelity Speech Synthesis](../Vocoder/2020.10.12_HiFi-GAN.md). ArXiv:2010.05646/NeurIPS2020.
 [^Chung2018Semi]: [Semi-Supervised Training for Improving Data Efficiency in End-to-End Speech Synthesis](../Others/2018.08.30_Chung2018Semi.md). ArXiv:1808.10128v1/ICASSP2018.
 [^Ao2021SpeechT5]: [**SpeechT5**: Unified-Modal Encoder-Decoder Pre-Training for Spoken Language Processing](../SpeechLM/ST2ST/2021.10.14_SpeechT5.md). ArXiv:2110.07205.
