--- a/Models/CodecLM/2023.03.07_VALL-E_X.md
+++ b/Models/CodecLM/2023.03.07_VALL-E_X.md
@@ -115,7 +115,7 @@ speech-to-speech translation.
 
 As illustrated in [Fig.01](#fig_vallex_framework), after training, ***VALL-E X*** can predict the acoustic tokens of the target language prompted by the phoneme sequences of both languages and the acoustic tokens of the source language.
 The generated acoustic token sequence is decompressed to the target speech waveform by an offline audio codec decoder.
-***VALL-E X*** is trained on two large-scale multi-speaker datasets, **Libri-Light**[^Kahn2019Libri-Light] and WenetSpeech [^Zhang2022Wenetspeech], containing about 60,000 hours of English audiobook speech data and 10,000+ hours of multi-domain Chinese ASR data, respectively.
+***VALL-E X*** is trained on two large-scale multi-speaker datasets, **Libri-Light**[^Kahn2019Libri-Light] and WenetSpeech [^Zhang2021WenetSpeech], containing about 60,000 hours of English audiobook speech data and 10,000+ hours of multi-domain Chinese ASR data, respectively.
 To our knowledge, they are the largest publicly available speech datasets for English and Chinese.
 The combination of LibriLight and WenetSpeech makes a large multi-lingual multi-speaker multi-domain unclean speech dataset, which significantly improves the coverage of different speakers and enhances ***VALL-E X***'s generalization capacity.
 The comparison between ***VALL-E X*** and the previous cross-lingual TTS systems are listed in [Tab.01](#table_compare).
@@ -480,7 +480,7 @@ We provide the synthesized audio samples on our demo page to better show the per
 <table><tr><td width="50%">
 
 Our ***VALL-E X*** is trained using bilingual speech-transcription (ASR) data.
-The Chinese ASR data are from WenetSpeech [^Zhang2022Wenetspeech] containing 10,000+ hours of multi-domain labeled speech.
+The Chinese ASR data are from WenetSpeech [^Zhang2021WenetSpeech] containing 10,000+ hours of multi-domain labeled speech.
 The English ASR data are from **Libri-Light**[^Kahn2019Libri-Light] containing about 60,000 hours of unlabeled speech, whose speech data are collected from audiobooks.
 We train a Kaldi [URL](https://github.com/kaldi-asr/kaldi/tree/master/egs/librispeech) ASR model on the labeled Librispeech **LibriSpeech**[^Panayotov2015LibriSpeech] dataset to generate the pseudo transcripts for the unlabeled LibriLight speech.
 
@@ -491,7 +491,7 @@ We train a Kaldi [URL](https://github.com/kaldi-asr/kaldi/tree/master/egs/libris
 
 To train the speech recognition & translation model for S2ST, we also use additional MT and ST data.
 The MT data are from AI Challenger [URL](https://challenger.ai/competition/translation), OpenSubtitles2018 [URL](https://opus.nlpl.eu/OpenSubtitles2018.php) and WMT2020 [URL](https://www.statmt.org/wmt20/translation-task.html), which contain about 13M, 10M, and 50M sentence pairs in conversion, drama [URL](http://www.opensubtitles.org/), and news domains, respectively.
-The English$\rightarrow$Chinese ST data is from GigaST [^Ye2022GigaST], which is created by translating the transcripts in GigaSpeech [^Chen2021Gigaspeech] using a strong machine translation system.
+The English$\rightarrow$Chinese ST data is from GigaST [^Ye2022GigaST], which is created by translating the transcripts in GigaSpeech [^Chen2021GigaSpeech] using a strong machine translation system.
 Similarly, we create the Chinese$\rightarrow$English ST data by translating the transcripts of WenetSpeech using an MT model trained by ourselves on the MT data mentioned above.
 
 </td><td>
@@ -907,7 +907,7 @@ The models are tuned on 32 GPUs with a batch size of 2,000,000 (125 seconds) per
 [^Zhang2019Learning]: Learning to Speak Fluently in a Foreign Language: Multilingual Speech Synthesis and Cross-Language Voice Cloning. arXiv:1907.04448.
 [^Lee2022Empirical]: An Empirical Study on L2 Accents of Cross-Lingual Text-to-Speech Systems via Vowel Space. arXiv:2211.03078.
 [^Kahn2019Libri-Light]: [**Libri-Light**: A Benchmark for ASR with Limited or No Supervision](../../Datasets/2019.12.17_Libri-Light.md). ArXiv:1912.07875v1/ICASSP2020.
-[^Zhang2022Wenetspeech]: WENETSPEECH: A 10000+ Hours Multi-Domain Mandarin Corpus for Speech Recognition. ICASSP 2022 - 2022 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2022.
+[^Zhang2021WenetSpeech]: [**WenetSpeech**: A 10000+ Hours Multi-domain Mandarin Corpus for Speech Recognition](../../Datasets/2021.10.07_WenetSpeech.md). ArXiv:2110.03370v5.
 [^Panayotov2015LibriSpeech]: [**LibriSpeech**: An ASR Corpus Based on Public Domain Audio Books](../../Datasets/2015.04.19_LibriSpeech.md). IEEE@ICASSP2015.
 [^Wester2010Emime]: The EMIME Bilingual Database.
 [^Oord2016WaveNet]: [**WaveNet**: A Generative Model for Raw Audio](../Vocoder/2016.09.12_WaveNet.md). ArXiv:1609.03499v2.
@@ -917,7 +917,7 @@ The models are tuned on 32 GPUs with a batch size of 2,000,000 (125 seconds) per
 [^Kreuk2022AudioGen]: [**AudioGen**: Textually Guided Audio Generation](../SpeechLM/ST2S/2022.09.30_AudioGen.md). ArXiv:2209.15352v2/ICLR2023Poster.
 [^Borsos2022AudioLM]: [**AudioLM**: A Language Modeling Approach to Audio Generation](../SpeechLM/PureSpeechLM/2022.09.07_AudioLM.md). ArXiv:2209.03143v2/TASLP2023.
 [^Chung2021W2V-BERT]: [**W2V-BERT**: Combining Contrastive Learning and Masked Language Modeling for Self-Supervised Speech Pre-Training](../Tokenizers/2021.08.07_W2V-BERT.md). ArXiv:2108.06209/ASRU2021.
-[^Zeghidour2021SoundStream]: [**SoundStream**: An End-to-End Neural Audio Codec](../Tokenizers/2021.07.07_SoundStream.md). ArXiv:2107.03312v1/TASLP2021.
+[^Zeghidour2021SoundStream]: [**SoundStream**: An End-to-End Neural Audio Codec](../Codec/2021.07.07_SoundStream.md). ArXiv:2107.03312v1/TASLP2021.
 [^Liu2020Multi-Lingual]: Multi-Lingual Multi-Speaker Text-to-Speech Synthesis for Voice Cloning With Online Speaker Enrollment.. Interspeech 2020.
 [^Lavie1997Janus-Iii]: JANUS-III: Speech-to-Speech Translation in Multiple Languages. 1997 IEEE International Conference on Acoustics, Speech, and Signal Processing 1997.
 [^Nakamura2006Atr]: The ATR Multilingual Speech-to-Speech Translation System. IEEE Transactions on Audio, Speech, and Language Processing 2006.
@@ -932,7 +932,7 @@ The models are tuned on 32 GPUs with a batch size of 2,000,000 (125 seconds) per
 [^Wang2021Voxpopuli]: Voxpopuli: A Large-Scale Multilingual Speech Corpus for Representation Learning, Semi-Supervised Learning and Interpretation. arXiv:2101.00390.
 [^Jia2022CVSS]: CVSS Corpus and Massively Multilingual Speech-to-Speech Translation. arXiv:2201.03713.
 [^Duquenne2022SpeechMatrix]: SpeechMatrix: A Large-Scale Mined Corpus of Multilingual Speech-to-Speech Translations. arXiv:2211.04508.
-[^Defossez2022EnCodec]: [**EnCodec**: High Fidelity Neural Audio Compression](../Tokenizers/2022.10.24_EnCodec.md). ArXiv:2210.13438/TMLR2023.
+[^Defossez2022EnCodec]: [**EnCodec**: High Fidelity Neural Audio Compression](../Codec/2022.10.24_EnCodec.md). ArXiv:2210.13438/TMLR2023.
 [^Zhang2022SpeechUT]: SpeechUT: Bridging Speech and Text With Hidden-Unit for Encoder-Decoder Based Speech-Text Pre-Training. arXiv:2210.03730.
 [^Zhang2022Speechlm]: Speechlm: Enhanced Speech Pre-Training With Unpaired Textual Data. arXiv:2209.15329.
 [^Graves2006Connectionist]: Connectionist Temporal Classification: Labelling Unsegmented Sequence Data With Recurrent Neural Networks. Proceedings of the 23rd International Conference on Machine Learning 2006.
@@ -940,7 +940,7 @@ The models are tuned on 32 GPUs with a batch size of 2,000,000 (125 seconds) per
 [^Hsu2021HuBERT]: [**HuBERT**: Self-Supervised Speech Representation Learning by Masked Prediction of Hidden Units](../Tokenizers/2021.06.14_HuBERT.md). ArXiv:2106.07447/TASLP2021.
 [^Mittag2021Deep]: Deep Learning Based Assessment of Synthetic Speech Naturalness. arXiv:2104.11673.
 [^Ye2022GigaST]: GigaST: A 10,000-Hour Pseudo Speech Translation Corpus. arXiv:2204.03939.
-[^Chen2021Gigaspeech]: Gigaspeech: An Evolving, Multi-Domain Asr Corpus With 10,000 Hours of Transcribed Audio. arXiv:2106.06909.
+[^Chen2021GigaSpeech]: [**GigaSpeech**: An Evolving, Multi-domain ASR Corpus with 10,000 Hours of Transcribed Audio](../../Datasets/2021.06.13_GigaSpeech.md). ArXiv:2106.06909v1.
 [^Casanova2021YourTTS]: [**YourTTS**: Towards Zero-Shot Multi-Speaker TTS and Zero-Shot Voice Conversion for Everyone](../E2E/2021.12.04_YourTTS.md). ArXiv:2112.02418v4/ICML2022.
 [^Jia2022Translatotron]: Translatotron 2: High-Quality Direct Speech-to-Speech Translation With Voice Preservation. International Conference on Machine Learning 2022.
 [^Um2020Emotional]: Emotional Speech Synthesis With Rich and Granularized Control. ICASSP 2020-2020 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2020.
