--- a/Models/CodecLM/2024.01.14_ELLA-V.md
+++ b/Models/CodecLM/2024.01.14_ELLA-V.md
@@ -695,7 +695,7 @@ We aspire for this work to advance research in enhancing the robustness of speec
 [^Jeong2021Diff-TTS]: [**Diff-TTS**: A Denoising Diffusion Model for Text-to-Speech](../Acoustic/2021.04.03_Diff-TTS.md). ArXiv:2104.01409v1/InterSpeech2021.
 [^Kim2021Guided-TTS]: [**Guided-TTS**: A Diffusion Model for Text-to-Speech via Classifier Guidance](../Diffusion/2021.11.23_Guided-TTS.md). ArXiv:2111.11755v4/ICML2022.
 [^Wu2022It\^oWave]: {It\^oWave}: {It\^o} Stochastic Differential Equation Is All You Need for Wave Generation. Proc. ICASSP 2022.
-[^Defossez2022EnCodec]: [**EnCodec**: High Fidelity Neural Audio Compression](../Tokenizers/2022.10.24_EnCodec.md). ArXiv:2210.13438/TMLR2023.
+[^Defossez2022EnCodec]: [**EnCodec**: High Fidelity Neural Audio Compression](../Codec/2022.10.24_EnCodec.md). ArXiv:2210.13438/TMLR2023.
 [^McAuliffe2017Montreal]: {Montreal Forced Aligner}: {Trainable} Text-Speech Alignment Using {Kaldi}. Proc. Interspeech 2017.
 [^Vaswani2017Transformer]: [**Transformer**: Attention Is All You Need](../_Basis/2017.06.12_Transformer.md). ArXiv:1706.03762/NeurIPS2017.
 [^Le2023VoiceBox]: [**VoiceBox**: Text-Guided Multilingual Universal Speech Generation at Scale](../FlowMatching/2023.06.23_Voicebox.md). ArXiv:2306.15687/NeurIPS2023Poster.
