--- a/Models/CodecLM/2024.04.03_CLaM-TTS.md
+++ b/Models/CodecLM/2024.04.03_CLaM-TTS.md
@@ -15,8 +15,8 @@
   - [Github]()
   - [Demo](https://clam-tts.github.io)
 - 文件:
-  - [ArXiv](_PDF/2404.02781v1__CLaM-TTS__Improving_Neural_Codec_Language_Modeling_for_Zero-Shot_Text-to-Speech.pdf)
-  - [Publication](_PDF/2404.02781p0__CLaM-TTS__ICLR2024.pdf)
+  - [ArXiv](../SpeechLM/_PDF/2404.02781v1__CLaM-TTS__Improving_Neural_Codec_Language_Modeling_for_Zero-Shot_Text-to-Speech.pdf)
+  - [Publication](../SpeechLM/_PDF/2404.02781p0__CLaM-TTS__ICLR2024.pdf)
 
 </details>
 
