--- a/Models/CodecLM/2024.01.25_VALL-T.md
+++ b/Models/CodecLM/2024.01.25_VALL-T.md
@@ -274,12 +274,12 @@ Threfore, this model eliminates the need for acquiring phoneme durations before 
 [^03]: [UniCATS](../Diffusion/2023.06.13_UniCATS.md)
 [^04]: [NaturalSpeech2](../Diffusion/2023.04.18_NaturalSpeech2.md)
 [^05]: [GSLM](../SpeechLM/PureSpeechLM/2021.02.01_GSLM.md)
-[^06]: [VQTTS](../E2E/2022.04.02_VQTTS.md)
+[^06]: [VQTTS](../Others/2022.04.02_VQTTS.md)
 [^07]: [GPT-3](../TextLM/2020.05.28_GPT-3.md)
 [^08]: [LLaMA2](../TextLM/2023.07.18_LLaMA2.md)
 [^09]: [TorToise-TTS](../Diffusion/2023.05.12_TorToise-TTS.md)
 [^10]: [SPEAR-TTS](../../SpeechLM_TTS/2023.02.07_SPEAR-TTS.md.02.07_SPEAR-TTS.md)
-[^11]: [VALL-E](2023.01.05_VALL-E.md)
+[^11]: [VALL-E](../CodecLM/2023.01.05_VALL-E.md5_VALL-E.md)
 [^12]: [Transducer/RNN-T](../-ASR/2012.11.14_RNN-T.md)
 [^13]: Streaming End-To-End Speech Recognition for Mobile Devices.
 [^14]: [Transformer](../_Basis/2017.06.12_Transformer.md)
