--- a/Models/CodecLM/2024.06.08_VALL-E_2.md
+++ b/Models/CodecLM/2024.06.08_VALL-E_2.md
@@ -916,9 +916,9 @@ We will also put [Microsoft AI Principles](https://www.microsoft.com/ai/responsi
 [^02]: DBLP:conf/aaai/Li0LZL19
 [^03]: DBLP:conf/nips/RenRTQZZL19
 [^04]: NaturalSpeech
-[^05]: [VALL-E](2023.01.05_VALL-E.md)
+[^05]: [VALL-E](../CodecLM/2023.01.05_VALL-E.md5_VALL-E.md)
 [^06]: [ELLA-V](../../SpeechLM_TTS/2024.01.14_ELLA-V.md024.01.14_ELLA-V.md)
-[^07]: [RALL-E](../SpeechLM/ST2S/2024.04.04_RALL-E.md)
+[^07]: [RALL-E](2024.04.04_RALL-E.md
 [^08]: [SoundStorm](../SpeechLM/ST2S/2023.05.16_SoundStorm.md)
 [^09]: [Voicebox](../FlowMatching/2023.06.23_Voicebox.md.md)
 [^10]: [NaturalSpeech3](../Diffusion/2024.03.05_NaturalSpeech3.md)
@@ -932,7 +932,7 @@ We will also put [Microsoft AI Principles](https://www.microsoft.com/ai/responsi
 [^18]: zhang2023speak
 [^19]: [SPEAR-TTS](2023.02.07_SPEAR-TTS.md
 [^20]: [Make-A-Voice](../SpeechLM/ST2S/2023.05.30_Make-A-Voice.md)
-[^21]: [Mega-TTS](../SpeechLM/ST2S/2023.06.06_Mega-TTS.md)
+[^21]: [Mega-TTS](../SpeechLM_TTS/2023.06.06_Mega-TTS.md)
 [^22]: [Mega-TTS2](../SpeechLM/ST2S/2023.07.14_Mega-TTS2.md)
 [^23]: [UniAudio](../SpeechLM/ST2S/2023.10.01_UniAudio.md)
 [^24]: [BASE TTS](../SpeechLM/ST2S/2024.02.12_BASE-TTS.md)
