--- a/Models/CodecLM/2024.06.12_VALL-E_R.md
+++ b/Models/CodecLM/2024.06.12_VALL-E_R.md
@@ -21,7 +21,7 @@
   - [Github]()
   - [Demo](https://aka.ms/valler)
 - 文件:
-  - [ArXiv](PDF/2024.06.12_2406.07855v1__VALL-E_R__Robust_and_Efficient_Zero-Shot_Text-to-Speech_Synthesis_via_Monotonic_Alignment.pdf)
+  - [ArXiv](../SpeechLM_TTS/PDF/2024.06.12_2406.07855v1__VALL-E_R__Robust_and_Efficient_Zero-Shot_Text-to-Speech_Synthesis_via_Monotonic_Alignment.pdf)
   - [Publication] #TODO
 
 </details>
@@ -508,7 +508,7 @@ Experimental results demonstrate that ***VALL-E R*** can effectively model the c
 [^10]: arik2018neural
 [^11]: cooper2020zero
 [^12]: brown2020language
-[^13]: [VALL-E](2023.01.05_VALL-E.md)
+[^13]: [VALL-E](../CodecLM/2023.01.05_VALL-E.md5_VALL-E.md)
 [^14]: [SPEAR-TTS](2023.02.07_SPEAR-TTS.md
 [^15]: jiang2023mega
 [^16]: kim2023clam
