--- a/Models/CodecLM/2024.10.06_HALL-E.md
+++ b/Models/CodecLM/2024.10.06_HALL-E.md
@@ -634,11 +634,11 @@ This indicates that our method could serve as a replacement for traditional SSL 
 [^02]: [PaLM](../TextLM/2022.04.05_PaLM.md)
 [^03]: [GLM-130B](../../TextLM/GLM-130B.md)
 [^04]: [VALL-E](../../SpeechLM_TTS/2023.01.05_VALL-E.md023.01.05_VALL-E.md)
-[^05]: [VALL-E X](2023.03.07_VALL-E_X.md)
+[^05]: [VALL-E X](../CodecLM/2023.03.07_VALL-E_X.mdVALL-E_X.md)
 [^06]: [ELLA-V](../../SpeechLM_TTS/2024.01.14_ELLA-V.md024.01.14_ELLA-V.md)
 [^07]: [VALL-E R](../../SpeechLM_TTS/2024.06.12_VALL-E_R.md4.06.12_VALL-E_R.md)
 [^08]: [VALL-E2](../../SpeechLM_TTS/2024.06.08_VALL-E_2.md4.06.08_VALL-E_2.md)
-[^09]: [RALL-E](2024.04.04_RALL-E.md)
+[^09]: [RALL-E](2024.04.04_RALL-E.md
 [^10]: [MELLE](../../SpeechLM_TTS/2024.07.11_MELLE.md2024.07.11_MELLE.md)
 [^11]: [SoundStream](../../SpeechCodec/2021.07.07_SoundStream.md)
 [^12]: [EnCodec](../../SpeechCodec/2022.10.24_EnCodec.md)
@@ -655,7 +655,7 @@ This indicates that our method could serve as a replacement for traditional SSL 
 [^23]: [YourTTS](../E2E/2021.12.04_YourTTS.md)
 [^24]: Neural voice cloning with a few samples.
 [^25]: Sample Efficient Adaptive Text-to-Speech.
-[^27]: [Mega-TTS](../SpeechLM/ST2S/2023.06.06_Mega-TTS.md)
+[^27]: [Mega-TTS](../SpeechLM_TTS/2023.06.06_Mega-TTS.md)
 [^28]: [Mega-TTS2](../SpeechLM/ST2S/2023.07.14_Mega-TTS2.md)
 [^29]: [NaturalSpeech2](../Diffusion/2023.04.18_NaturalSpeech2.md)
 [^30]: [NaturalSpeech3](../Diffusion/2024.03.05_NaturalSpeech3.md)
@@ -665,11 +665,11 @@ This indicates that our method could serve as a replacement for traditional SSL 
 [^34]: [UniAudio](../SpeechLM/ST2S/2023.10.01_UniAudio.md)
 [^35]: [Audiobox](../SpeechLM/2023.12.25_Audiobox.md)
 [^36]: [ITU. P.808](../../Evaluations/P.808_DCR.md)
-[^37]: [Seed-TTS](../SpeechLM/2024.06.04_Seed-TTS.md)
+[^37]: [Seed-TTS](2024.06.04_Seed-TTS.md
 [^38]: [AudioLM](../SpeechLM/PureSpeechLM/2022.09.07_AudioLM.md)
 [^39]: [SpeechGPT](../SpeechLM/Interaction/2023.05.18_SpeechGPT.md)
 [^40]: [PSLM](../SpeechLM/Interaction/2024.06.18_PSLM.md)
-[^41]: [Small-E](../SpeechLM/2024.06.06_Small-E.md)
+[^41]: [Small-E](../SpeechLM_TTS/2024.06.06_Small-E.md)
 [^42]: [HuBERT](../Tokenizers/2021.06.14_HuBERT.md)
 [^43]: [WavLM](../Tokenizers/2021.10.26_WavLM.md)
 [^44]: [GSLM](../SpeechLM/PureSpeechLM/2021.02.01_GSLM.md)
