--- a/Models/CodecLM/2023.03.07_VALL-E_X.md
+++ b/Models/CodecLM/2023.03.07_VALL-E_X.md
@@ -115,7 +115,7 @@ speech-to-speech translation.
 
 As illustrated in [Fig.01](#fig_vallex_framework), after training, ***VALL-E X*** can predict the acoustic tokens of the target language prompted by the phoneme sequences of both languages and the acoustic tokens of the source language.
 The generated acoustic token sequence is decompressed to the target speech waveform by an offline audio codec decoder.
-***VALL-E X*** is trained on two large-scale multi-speaker datasets, **Libri-Light**[^Kahn2019Libri-Light] and WenetSpeech [^Zhang2021WenetSpeech], containing about 60,000 hours of English audiobook speech data and 10,000+ hours of multi-domain Chinese ASR data, respectively.
+***VALL-E X*** is trained on two large-scale multi-speaker datasets, **Libri-Light**[^Kahn2019Libri-Light] and **WenetSpeech**[^Zhang2021WenetSpeech], containing about 60,000 hours of English audiobook speech data and 10,000+ hours of multi-domain Chinese ASR data, respectively.
 To our knowledge, they are the largest publicly available speech datasets for English and Chinese.
 The combination of LibriLight and WenetSpeech makes a large multi-lingual multi-speaker multi-domain unclean speech dataset, which significantly improves the coverage of different speakers and enhances ***VALL-E X***'s generalization capacity.
 The comparison between ***VALL-E X*** and the previous cross-lingual TTS systems are listed in [Tab.01](#table_compare).
@@ -480,7 +480,7 @@ We provide the synthesized audio samples on our demo page to better show the per
 <table><tr><td width="50%">
 
 Our ***VALL-E X*** is trained using bilingual speech-transcription (ASR) data.
-The Chinese ASR data are from WenetSpeech [^Zhang2021WenetSpeech] containing 10,000+ hours of multi-domain labeled speech.
+The Chinese ASR data are from **WenetSpeech**[^Zhang2021WenetSpeech] containing 10,000+ hours of multi-domain labeled speech.
 The English ASR data are from **Libri-Light**[^Kahn2019Libri-Light] containing about 60,000 hours of unlabeled speech, whose speech data are collected from audiobooks.
 We train a Kaldi [URL](https://github.com/kaldi-asr/kaldi/tree/master/egs/librispeech) ASR model on the labeled Librispeech **LibriSpeech**[^Panayotov2015LibriSpeech] dataset to generate the pseudo transcripts for the unlabeled LibriLight speech.
 
@@ -491,7 +491,7 @@ We train a Kaldi [URL](https://github.com/kaldi-asr/kaldi/tree/master/egs/libris
 
 To train the speech recognition & translation model for S2ST, we also use additional MT and ST data.
 The MT data are from AI Challenger [URL](https://challenger.ai/competition/translation), OpenSubtitles2018 [URL](https://opus.nlpl.eu/OpenSubtitles2018.php) and WMT2020 [URL](https://www.statmt.org/wmt20/translation-task.html), which contain about 13M, 10M, and 50M sentence pairs in conversion, drama [URL](http://www.opensubtitles.org/), and news domains, respectively.
-The English$\rightarrow$Chinese ST data is from GigaST [^Ye2022GigaST], which is created by translating the transcripts in GigaSpeech [^Chen2021GigaSpeech] using a strong machine translation system.
+The English$\rightarrow$Chinese ST data is from GigaST [^Ye2022GigaST], which is created by translating the transcripts in **GigaSpeech**[^Chen2021GigaSpeech] using a strong machine translation system.
 Similarly, we create the Chinese$\rightarrow$English ST data by translating the transcripts of WenetSpeech using an MT model trained by ourselves on the MT data mentioned above.
 
 </td><td>
