添加 RapFlow-TTS 背景

--- a/Models/FlowMatching/2025.06.20_2506.16741p0_RapFlow-TTS.md
+++ b/Models/FlowMatching/2025.06.20_2506.16741p0_RapFlow-TTS.md
@@ -72,6 +72,44 @@ Our code and demos are available at [Github.IO](https://tts-demo.github.io/rap.g
 
 ## 2·背景
 
+Here, we review the consistency FM \cite{yang2024consistency} method for training the RapFlow-TTS.
+Given a time index $t\in[0,1]$, sampled from a uniform distribution, FM learns a ground truth vector field $u_{t}$ to build the probability path $p_{t}(x_{t})$ from the random noise $x_{0} \sim p_{0}$ to target data $x_{1} \sim p_{1}$.
+The vector field is defined as an ODE for a flow $\phi_{t}$, where $\phi_{t}$ is a function that transforms data over time, as follows:
+
+$$
+\frac{d}{dt}\phi_{t}(x)=u_{t}(\phi_{t}(x)); \quad \phi_{0}(x)=x,
+\tag{01}
+$$
+
+The solution of Eq.01, i.e., flow, represents the sampling path.
+For training FM models, a simple regression with the ground-truth vector field is applied as follows:
+
+$$
+\mathcal{L}_{FM}=||v_{\theta}(t, x_{t}) - u(t, x_{t})||^{2}_{2},
+\tag{02}
+$$
+
+where $v_{\theta}(t, x_{t})$ denotes the learnable vector field network.
+
+In contrast to the FM, consistency FM trains the vector field by ensuring that any point on the trajectory reaches the same endpoint with the same velocity.
+Let the linearly interpolated noise sample at time $t$ be ${x}_{t}=tx_{1} + (1-t)x_{0}$.
+Its objective function is composed of a straight flow loss $\mathcal{L}_{sf}$ and a velocity consistency loss $\mathcal{L}_{vc}$ as follows:
+
+$$
+\begin{aligned}
+\mathcal{L}_{cfm}&=\mathcal{L}_{sf}+\alpha\mathcal{L}_{vc},\\
+\mathcal{L}_{sf}&=||f_{\theta}(t, x_{t}) - f_{\theta^{-}}(t+\Delta t, x_{t+\Delta t})||^{2}_{2},\\
+\mathcal{L}_{vc}&=||v_{\theta}(t, x_{t}) - v_{\theta^{-}}(t+\Delta t, x_{t+\Delta t})||^{2}_{2},\\
+f_{\theta}(t,x_{t})&=x_{t}+(1-t) \times v_{\theta}(t,x_{t}),
+\end{aligned}
+\tag{03}
+$$
+
+where $\theta^{-}$ denotes model parameters with a stop gradient; $\alpha$ denotes a loss weight; and $\Delta t$ denotes a time interval.
+Since $f_{\theta}$ guides $x_{t}$ to the estimated endpoint of the trajectory, the straight flow loss constrains consistency from the trajectory viewpoint, ensuring straight flow.
+In contrast, the velocity consistency loss directly enforces the consistency of the vector field.
+This allows the consistency FM to learn how to produce consistent outputs along the straightened trajectory, accurately estimating the target distribution even with a few-step generation.
+
 ## 3·方法
 
 ## 4·实验
