翻译 RapFlow-TTS 引言

--- a/Models/FlowMatching/2025.06.20_RapFlow-TTS.md
+++ b/Models/FlowMatching/2025.06.20_RapFlow-TTS.md
@@ -41,12 +41,21 @@ Experimental results show that ***RapFlow-TTS*** achieves high-fidelity speech s
 
 ## 1·引言
 
+<!--
 Text-to-speech (TTS), also known as speech synthesis, aims to synthesize high-fidelity speech, given an input text (**Tacotron**[^Wang2017Tacotron], **Tacotron2**[^Shen2018Tacotron2], **Glow-TTS**[^Kim2020Glow-TTS]).
 Among the various generative modeling approaches (**FastSpeech**[^Ren2019FastSpeech], **Flow-TTS**[^Miao2020Flow-TTS], **TransformerTTS**[^Li2019TransformerTTS], **FastSpeech2**[^Ren2020FastSpeech2], **Diff-TTS**[^Jeong2021Diff-TTS]), ordinary differential equations (ODE)-based models (**Grad-TTS**[^Popov2021Grad-TTS], **DEX-TTS**[^Park2024DEX-TTS]) have become strong solutions for outstanding TTS.
 One representative method involves diffusion models using stochastic differential equations (SDE) (**Score-Based Generative Modeling**[^Song2020Score], **EDM**[^Karras2022EDM]), e.g., **Grad-TTS**[^Popov2021Grad-TTS].
 It trains a score network with an SDE-based diffusion process and solves the probability flow ODE for speech synthesis.
 However, ODE trajectories obtained by diffusion models are complicated (**FM**[^Lipman2022FM], **CFM**[^Tong2023CFM]), requiring numerous steps to generate high-quality speech (**VoiceFlow**[^Guo2024VoiceFlow]).
 Since TTS functions as a user interaction channel, the slow inference speed caused by numerous diffusion steps is a major drawback of diffusion-based TTS.
+-->
+
+文本转语音, 也称为语音合成, 旨在给定输入文本合成高保真语音 (**Tacotron**[^Wang2017Tacotron], **Tacotron2**[^Shen2018Tacotron2], **Glow-TTS**[^Kim2020Glow-TTS]).
+在各种生成式建模方法中 (**FastSpeech**[^Ren2019FastSpeech], **Flow-TTS**[^Miao2020Flow-TTS], **TransformerTTS**[^Li2019TransformerTTS], **FastSpeech2**[^Ren2020FastSpeech2], **Diff-TTS**[^Jeong2021Diff-TTS]), 基于常微分方程的模型已经成为了杰出 TTS 的代表方案.
+一个代表性方法涉及到使用随机微分方程的扩散模型 (**Score-Based Generative Modeling**[^Song2020Score], **EDM**[^Karras2022EDM]), 如 **Grad-TTS**[^Popov2021Grad-TTS].
+它训练了一个基于 SDE 扩散过程的得分网络, 并求解概率流 ODE 以进行语音合成.
+然而, 由扩散模型获得的 ODE 轨迹是复杂的 (**FM**[^Lipman2022FM], **CFM**[^Tong2023CFM]), 需要多步才能生成高质量语音 (**VoiceFlow**[^Guo2024VoiceFlow]).
+因为 TTS 作为用户交互渠道, 由大量扩散步数导致的推理速度缓慢是基于扩散的 TTS 的主要缺陷.
 
 To resolve this limitation, researchers investigated improved ODE-based models (**FM**[^Lipman2022FM], **CFM**[^Tong2023CFM], **Rectified Flow**[^Liu2022RectifiedFlow], **Consistency Model**[^Song2023ConsistencyModel]) for TTS.
 For example, **CoMoSpeech**[^Ye2023CoMoSpeech] applied consistency distillation (**Consistency Model**[^Song2023ConsistencyModel]) to transfer the knowledge of a diffusion teacher model to a consistent student model.
