翻译 RapFlow-TTS 引言

--- a/Models/FlowMatching/2025.06.20_RapFlow-TTS.md
+++ b/Models/FlowMatching/2025.06.20_RapFlow-TTS.md
@@ -57,10 +57,17 @@ Since TTS functions as a user interaction channel, the slow inference speed caus
 然而, 由扩散模型获得的 ODE 轨迹是复杂的 (**FM**[^Lipman2022FM], **CFM**[^Tong2023CFM]), 需要多步才能生成高质量语音 (**VoiceFlow**[^Guo2024VoiceFlow]).
 因为 TTS 作为用户交互渠道, 由大量扩散步数导致的推理速度缓慢是基于扩散的 TTS 的主要缺陷.
 
+<!--
 To resolve this limitation, researchers investigated improved ODE-based models (**FM**[^Lipman2022FM], **CFM**[^Tong2023CFM], **Rectified Flow**[^Liu2022RectifiedFlow], **Consistency Model**[^Song2023ConsistencyModel]) for TTS.
 For example, **CoMoSpeech**[^Ye2023CoMoSpeech] applied consistency distillation (**Consistency Model**[^Song2023ConsistencyModel]) to transfer the knowledge of a diffusion teacher model to a consistent student model.
 As the consistency constraint maps any point on the ODE trajectory to the endpoint, i.e., the target data, the student model can consistently produce high-quality speech regardless of the number of diffusion steps.
 However, the complexity of diffusion-based ODE trajectories limited the effective construction of consistency models along those trajectories.
+-->
+
+为了解决这一局限性, 研究人员研究了改进的基于 ODE 的模型 (**FM**[^Lipman2022FM], **CFM**[^Tong2023CFM], **Rectified Flow**[^Liu2022RectifiedFlow], **Consistency Model**[^Song2023ConsistencyModel]) 用于 TTS.
+例如: **CoMoSpeech**[^Ye2023CoMoSpeech] 利用一致性蒸馏 (**Consistency Model**[^Song2023ConsistencyModel]) 将知识从扩散教师模型迁移到一致学生模型.
+通过一致性约束将 ODE 轨迹上的任意点映射到终点, 即目标数据, 学生模型可以不管扩散步数就能一致地产生高质量语音.
+然而, 基于扩散的 ODE 轨迹的复杂性限制了在这些轨迹上进行一致性模型的有效构造.
 
 Meanwhile, flow matching (FM), which learns the vector field for the ODE and probability path, is another approach for improving ODE-based models.
 Using an optimal transport plan that makes the probability path linear in time (**FM**[^Lipman2022FM], **CFM**[^Tong2023CFM]), the ODE trajectory tends to be straight, making the few-step performance of FM superior to that of the diffusion models.
