--- a/Models/FlowMatching/2023.09.10_VoiceFlow.md
+++ b/Models/FlowMatching/2023.09.10_VoiceFlow.md
@@ -207,7 +207,59 @@ Algorithm \ref{algo} summarizes the whole process of training VoiceFlow, includi
 
 ## 4·实验
 
+We evaluated VoiceFlow both on the single-speaker and multi-speaker benchmarks, so as to obtain a comprehensive observation of the proposed TTS system.
+For single-speaker evaluations, we used the LJSpeech~\cite{ito2017lj} dataset, which contains approximately 24 hours of high-quality female voice recordings.
+For multi-speaker experiments, we included all the training partitions of the LibriTTS~\cite{libritts} dataset, which amounted to 585 hours and over 2300 speakers.
+% 测试句子的数量，以及LibriTTS的测试集仍然是seen speaker，这两件事是否要说明？
+We downsampled all the training data to 16kHz for simplicity.
+Mel-spectrogram and forced alignments were extracted with 12.5ms frame shift and 50ms frame length on each corpus by Kaldi~\cite{povey2011kaldi}.
+
+We compared VoiceFlow with the diffusion-based acoustic model GradTTS.
+% To minimize the affect of irrelevant factors and only focus on the algorithmic differences,
+To only focus on the algorithmic differences,
+we used the official implementation of GradTTS\footnote{\url{https://github.com/huawei-noah/Speech-Backbones/tree/main/Grad-TTS}} and trained it with the same data configurations.
+We also used ground truth duration instead of the monotonic alignment search algorithm in GradTTS to mitigate the impact of different durations.
+Notably, we used exactly the same model architecture to build VoiceFlow, so the two compared models have nearly identical inference costs when the ODEs are both solved using Euler method with the same number of steps.
+
+As the acoustic models generate mel-spectrograms as targets, HifiGAN~\cite{kong2020hifi} was adopted as the vocoder and trained separately on the two datasets.
+
 ## 5·结果
+
+### 主观评估
+
+We first evaluated the system performance of VoiceFlow compared to GradTTS using subjective listening tests.
+In this test, listeners were asked to rate the mean opinion score (MOS) of the provided speech clips based on the audio quality and naturalness.
+For both the acoustic models, we used 2, 10 and 100 steps representing low, medium and large number of sampling steps for synthesis.
+The results are presented in Table \ref{tab:naturalness}, where ``GT (voc.)" means the vocoded ground truth speech.
+It can be seen that in both the two datasets and three sampling scenarios, VoiceFlow achieves a consistently higher MOS score than GradTTS.
+Also, when the sampling steps are decreased, the performance of GradTTS drops significantly while VoiceFlow does not suffer from such huge degeneration.
+Specifically, in 2-step sampling situations, samples from GradTTS become heavily degraded, but that from VoiceFlow remains to be satisfying.
+Note that the 10-step GradTTS was already reported to be competitive against other baselines~\cite{popov2021grad}.
+In LibriTTS, the corpus with large speaker and environment variability, the difference of compared systems becomes more obvious.
+This suggests the stronger potential of flow-matching-based models in fitting complex speech data.
+
+### 客观评估
+
+We also objectively evaluated the performance of VoiceFlow.
+Two metrics were included for comparison: MOSnet~\cite{mosnet} and mel-cepstral distortion (MCD).
+MOSnet is a neural network designed to fit human perception of speech signals, and we found it correctly reflects speech quality to a reasonable extent.
+We use the officially trained MOSnet model to evaluate synthetic speech on more choices of sampling steps.
+The results are plotted in Fig. \ref{fig:MOSnet}, where the shadowed region stands for the mean and 95\% confidence interval of MOSnet score on ground truth speech.
+It can be seen to mainly conform with the MOS results, as the change of VoiceFlow's scores among different sampling steps is much lower than that of GradTTS.
+MCD is another objective tool to measure the distortion of the cepstrum against ground truth.
+The cepstrum order here is set to be 13.
+Similarly, the MCD values on different numbers of sampling steps are shown in Fig. \ref{fig:MCD}, also verifying the better speed-quality tradeoff of VoiceFlow compared to the diffusion counterpart.
+
+### 消融实验
+
+We also conducted an ablation study to verify the effectiveness of the rectified flow technique in VoiceFlow.
+A comparative MOS (CMOS) test was performed where raters were asked to rate the score of a given sentence compared to the reference, ranging from -3 to 3.
+Table \ref{tab:cmos} shows the results with 2 sampling steps, where ``-ReFlow" means VoiceFlow without rectified flow.
+It is noticeable that rectified flow makes a remarkable effect in such limited sampling steps, and LibriTTS exhibits an even more significant difference than LJSpeech.
+
+To provide an intuition on the impact of rectified flow, we visualized some sampling trajectories of VoiceFlow both with and without rectified flow on two out of the 80 mel dimensions in Figure \ref{fig:traj}.
+The trajectory of GradTTS is also shown here.
+Then, the visual contrast between the straight and curving trajectories leaves no doubt on the efficacy of using rectified flow in TTS models.
 
 ## 6·结论
 
