--- a/Models/FlowMatching/2023.09.10_VoiceFlow.md
+++ b/Models/FlowMatching/2023.09.10_VoiceFlow.md
@@ -51,7 +51,6 @@ These models successfully decrease the necessary number of sampling steps in dif
 However, due to the intricate nature of the diffusion process, the speed-quality tradeoff still exists and is hard to overcome.
 
 Despite denoising diffusion, another branch in the family of differential-equation-based generative models began to arise recently, namely the flow matching generative models~\cite{lipman2022flow,liu2022flow,tong2023improving}.
-% Different from diffusion models which models the score function of a specific SDE, flow matching aims to model the vector field implied by an arbitrary ODE directly.
 While diffusion models learn the score function of a specific SDE, flow matching aims to model the vector field implied by an arbitrary ODE directly.
 A neural network is used for approximating the vector field, and the ODE can also be numerically solved to obtain data samples.
 The design of such ODE and vector field often considers linearizing the sampling trajectory and minimizing the transport cost~\cite{tong2023improving}.
@@ -123,7 +122,8 @@ This is often referred to as the "conditional flow matching" algorithm, which is
 The notion of rectified flow is proposed in \cite{liu2022flow}.
 It is a simple but mathematically solid approach to improve the sampling efficiency of flow matching models.
 The flow matching model here has the same formulation as that of \cite{tong2023improving}, which is conditioned on both $\bm x_1$ and $\bm x_0$.
-Suppose a flow matching model is trained to generate data $\bm {\hat x}_1$ from noise $\bm x_0$ by the ODE in Eq.\eqref{eq:ODE}. In other words, $\bm x_0$ and $\bm {\hat x}_1$ are a pair of the starting and ending points of the ODE trajectory.
+Suppose a flow matching model is trained to generate data $\bm {\hat x}_1$ from noise $\bm x_0$ by the ODE in Eq.\eqref{eq:ODE}.
+In other words, $\bm x_0$ and $\bm {\hat x}_1$ are a pair of the starting and ending points of the ODE trajectory.
 Then, this flow matching model is trained again, but conditions $\bm v_t(\bm x\mid \bm x_0,\bm x_1)$ and $p_t(\bm x\mid \bm x_0,\bm x_1)$ on the given pair $(\bm x_0, \bm {\hat x}_1)$ instead of independently sampling $\bm x_0, \bm x_1$.
 This flow rectification step can be iterated multiple times, denoted by the recursion $\left(\bm z_0^{k+1}, \bm z_1^{k+1}\right) = \operatorname{FM}\left(\bm z_0^{k}, \bm z_1^k\right)$, with $\operatorname{FM}$ the flow matching model and $(\bm z_0^0, \bm z_1^0)=(\bm x_0, \bm x_1)$ the independently drawn noise and data samples.
 
@@ -147,9 +147,10 @@ Suppose this ODE connects the noise distribution $p_0(\bm x_0\mid \bm y)=\mathca
 Our goal is to accurately estimate the vector field $\bm v_t$ given condition $\bm y$, as we can then generate a mel-spectrogram by solving this ODE from $t=0$ to $t=1$.
 
 Inspired by \cite{liu2022flow,tong2023improving}, we opt to use both a noise sample $\bm x_0$ and a data sample $\bm x_1$ to construct conditional probability paths as
-\begin{equation}\label{eq:cond-path-in-voiceflow}
-    p_t(\bm x\mid \bm x_0,\bm x_1, \bm y)=\mathcal N(\bm x\mid t\bm x_1+(1-t)\bm x_0, \sigma^2\bm I)
-\end{equation}
+$$
+p_t(\bm x\mid \bm x_0,\bm x_1, \bm y)=\mathcal N(\bm x\mid t\bm x_1+(1-t)\bm x_0, \sigma^2\bm I)
+$$
+
 where $\sigma$ is a sufficiently small constant.
 In this formulation, the endpoints of these paths are $\mathcal N(\bm x_0,\sigma^2\bm I)$ for $t=0$ and $\mathcal N(\bm x_1,\sigma^2\bm I)$ for $t=1$ respectively.
 These paths also determine a probability path $p_t(\bm x\mid \bm y)$ marginal w.r.t $\bm x_0,\bm x_1$, whose boundaries approximate the noise distribution $p_0(\bm x_0\mid \bm y)$ and mel distribution $p_1(\bm x_1\mid \bm y)$.
@@ -164,8 +165,8 @@ $$
 $$
 
 The corresponding flow matching loss is denoted by $\mathcal L_{\text{FM}}$.
-The total loss function to train VoiceFlow will be $\mathcal L=\mathcal L_{\text{FM}} + \mathcal L_{\text{dur}}$, where $\mathcal L_{\text{dur}}$ is the mean squared loss for duration predictor.
-So, the whole acoustic model of VoiceFlow consists of the text encoder, duration predictor, duration adaptor and vector field estimator, as is shown in Fig. \ref{fig:model}.
+The total loss function to train ***VoiceFlow*** will be $\mathcal L=\mathcal L_{\text{FM}} + \mathcal L_{\text{dur}}$, where $\mathcal L_{\text{dur}}$ is the mean squared loss for duration predictor.
+So, the whole acoustic model of ***VoiceFlow*** consists of the text encoder, duration predictor, duration adaptor and vector field estimator, as is shown in Fig. \ref{fig:model}.
 The text encoder transforms the input phones into a latent space, upon which the duration per phone is predicted and fed to the duration adaptor.
 The repeated frame-level sequence $\bm y$ is then fed to the vector field estimator as a condition.
 The other two inputs to the vector field estimator are the sampled time $t$ and the sampled $\bm x_t$ from the conditional probability path in Eq.\eqref{eq:cond-path-in-voiceflow}.
@@ -181,15 +182,16 @@ By Eq.\eqref{eq:objective-voiceflow}, the vector field estimator $\bm u_\theta$ 
 Then, the ODE $\dd \bm x_t = \bm u_\theta(\bm x_t, \bm y, t)\dd t$ can be discretized for sampling a synthetic mel-spectrogram $\bm x_1$ given text $\bm y$.
 Off-the-shelf ODE solvers like Euler, Runge-Kutta, Dormand-Prince method, etc. can be directly applied for sampling.
 In the example of the Euler method with $N$ steps, each sampling step is
-\begin{equation}\label{eq:solver}
-    \bm {\hat x}_{\frac{k+1}{N}} = \bm {\hat x}_{\frac kN} + \frac1N{\bm u_\theta\left(\bm {\hat x}_{\frac kN} , \bm y, \frac kN\right)}, k=0,1,...,N-1
-\end{equation}
+$$
+\bm {\hat x}_{\frac{k+1}{N}} = \bm {\hat x}_{\frac kN} + \frac1N{\bm u_\theta\left(\bm {\hat x}_{\frac kN} , \bm y, \frac kN\right)}, k=0,1,...,N-1
+$$
+
 with $\bm {\hat x}_0\sim p_0(\bm x_0\mid \bm y)$ being the initial point and $\bm {\hat x}_1$ being the generated sample.
 Regardless of the discretization method, the solvers will produce a sequence of samples $\{\bm {\hat x}_{k/N}\}$ along the ODE trajectory, which gradually approximates a realistic spectrogram.
 
 Then we apply the rectified flow technique to further straighten the ODE trajectory.
 For every utterance in the training set, we draw a noise sample $\bm x'_0$ and run the ODE solver to obtain $\bm {\hat x}_1$ given text $\bm y$.
-The sample pair $(\bm x'_0, \bm {\hat x}_1)$ is then fed to the VoiceFlow again for rectifying the vector field estimator.
+The sample pair $(\bm x'_0, \bm {\hat x}_1)$ is then fed to the ***VoiceFlow*** again for rectifying the vector field estimator.
 In this flow rectification step, the new training criterion will be
 $$
 \min_\theta \mathbb E_{t,p(\bm x'_0, \bm {\hat x}_1\mid \bm y),p_t(\bm x_t\mid \bm x'_0,\bm {\hat x}_1,\bm y)} \|\bm u_\theta(\bm x_t, \bm y , t) - (\bm {\hat x}_1-\bm x'_0)\|^2
@@ -201,25 +203,22 @@ In this way, the vector field estimator is asked to find a more straightforward 
 Note that we provide the model with the ground truth duration sequence while generating data for rectified flow.
 This ensures that the model is fed with more natural speech, reducing the risk that inaccurate duration prediction degrades the model performance.
 
-Algorithm \ref{algo} summarizes the whole process of training VoiceFlow, including flow rectification.
+Algorithm \ref{algo} summarizes the whole process of training ***VoiceFlow***, including flow rectification.
 
 ![Images/2023.09.10_VoiceFlow_Algo.01.png](Images/2023.09.10_VoiceFlow_Algo.01.png)
 
 ## 4·实验
 
-We evaluated VoiceFlow both on the single-speaker and multi-speaker benchmarks, so as to obtain a comprehensive observation of the proposed TTS system.
+We evaluated ***VoiceFlow*** both on the single-speaker and multi-speaker benchmarks, so as to obtain a comprehensive observation of the proposed TTS system.
 For single-speaker evaluations, we used the LJSpeech~\cite{ito2017lj} dataset, which contains approximately 24 hours of high-quality female voice recordings.
 For multi-speaker experiments, we included all the training partitions of the LibriTTS~\cite{libritts} dataset, which amounted to 585 hours and over 2300 speakers.
-% 测试句子的数量，以及LibriTTS的测试集仍然是seen speaker，这两件事是否要说明？
 We downsampled all the training data to 16kHz for simplicity.
 Mel-spectrogram and forced alignments were extracted with 12.5ms frame shift and 50ms frame length on each corpus by Kaldi~\cite{povey2011kaldi}.
 
-We compared VoiceFlow with the diffusion-based acoustic model GradTTS.
-% To minimize the affect of irrelevant factors and only focus on the algorithmic differences,
-To only focus on the algorithmic differences,
-we used the official implementation of GradTTS\footnote{\url{https://github.com/huawei-noah/Speech-Backbones/tree/main/Grad-TTS}} and trained it with the same data configurations.
+We compared ***VoiceFlow*** with the diffusion-based acoustic model GradTTS.
+To only focus on the algorithmic differences, we used the official implementation of GradTTS\footnote{\url{https://github.com/huawei-noah/Speech-Backbones/tree/main/Grad-TTS}} and trained it with the same data configurations.
 We also used ground truth duration instead of the monotonic alignment search algorithm in GradTTS to mitigate the impact of different durations.
-Notably, we used exactly the same model architecture to build VoiceFlow, so the two compared models have nearly identical inference costs when the ODEs are both solved using Euler method with the same number of steps.
+Notably, we used exactly the same model architecture to build ***VoiceFlow***, so the two compared models have nearly identical inference costs when the ODEs are both solved using Euler method with the same number of steps.
 
 As the acoustic models generate mel-spectrograms as targets, HifiGAN~\cite{kong2020hifi} was adopted as the vocoder and trained separately on the two datasets.
 
@@ -227,45 +226,45 @@ As the acoustic models generate mel-spectrograms as targets, HifiGAN~\cite{kong2
 
 ### 主观评估
 
-We first evaluated the system performance of VoiceFlow compared to GradTTS using subjective listening tests.
+We first evaluated the system performance of ***VoiceFlow*** compared to GradTTS using subjective listening tests.
 In this test, listeners were asked to rate the mean opinion score (MOS) of the provided speech clips based on the audio quality and naturalness.
 For both the acoustic models, we used 2, 10 and 100 steps representing low, medium and large number of sampling steps for synthesis.
 The results are presented in Table \ref{tab:naturalness}, where ``GT (voc.)" means the vocoded ground truth speech.
-It can be seen that in both the two datasets and three sampling scenarios, VoiceFlow achieves a consistently higher MOS score than GradTTS.
-Also, when the sampling steps are decreased, the performance of GradTTS drops significantly while VoiceFlow does not suffer from such huge degeneration.
-Specifically, in 2-step sampling situations, samples from GradTTS become heavily degraded, but that from VoiceFlow remains to be satisfying.
+It can be seen that in both the two datasets and three sampling scenarios, ***VoiceFlow*** achieves a consistently higher MOS score than GradTTS.
+Also, when the sampling steps are decreased, the performance of GradTTS drops significantly while ***VoiceFlow*** does not suffer from such huge degeneration.
+Specifically, in 2-step sampling situations, samples from GradTTS become heavily degraded, but that from ***VoiceFlow*** remains to be satisfying.
 Note that the 10-step GradTTS was already reported to be competitive against other baselines~\cite{popov2021grad}.
 In LibriTTS, the corpus with large speaker and environment variability, the difference of compared systems becomes more obvious.
 This suggests the stronger potential of flow-matching-based models in fitting complex speech data.
 
 ### 客观评估
 
-We also objectively evaluated the performance of VoiceFlow.
+We also objectively evaluated the performance of ***VoiceFlow***.
 Two metrics were included for comparison: MOSnet~\cite{mosnet} and mel-cepstral distortion (MCD).
 MOSnet is a neural network designed to fit human perception of speech signals, and we found it correctly reflects speech quality to a reasonable extent.
 We use the officially trained MOSnet model to evaluate synthetic speech on more choices of sampling steps.
 The results are plotted in Fig. \ref{fig:MOSnet}, where the shadowed region stands for the mean and 95\% confidence interval of MOSnet score on ground truth speech.
-It can be seen to mainly conform with the MOS results, as the change of VoiceFlow's scores among different sampling steps is much lower than that of GradTTS.
+It can be seen to mainly conform with the MOS results, as the change of ***VoiceFlow***'s scores among different sampling steps is much lower than that of GradTTS.
 MCD is another objective tool to measure the distortion of the cepstrum against ground truth.
 The cepstrum order here is set to be 13.
-Similarly, the MCD values on different numbers of sampling steps are shown in Fig. \ref{fig:MCD}, also verifying the better speed-quality tradeoff of VoiceFlow compared to the diffusion counterpart.
+Similarly, the MCD values on different numbers of sampling steps are shown in Fig. \ref{fig:MCD}, also verifying the better speed-quality tradeoff of ***VoiceFlow*** compared to the diffusion counterpart.
 
 ### 消融实验
 
-We also conducted an ablation study to verify the effectiveness of the rectified flow technique in VoiceFlow.
+We also conducted an ablation study to verify the effectiveness of the rectified flow technique in ***VoiceFlow***.
 A comparative MOS (CMOS) test was performed where raters were asked to rate the score of a given sentence compared to the reference, ranging from -3 to 3.
-Table \ref{tab:cmos} shows the results with 2 sampling steps, where ``-ReFlow" means VoiceFlow without rectified flow.
+Table \ref{tab:cmos} shows the results with 2 sampling steps, where ``-ReFlow" means ***VoiceFlow*** without rectified flow.
 It is noticeable that rectified flow makes a remarkable effect in such limited sampling steps, and LibriTTS exhibits an even more significant difference than LJSpeech.
 
-To provide an intuition on the impact of rectified flow, we visualized some sampling trajectories of VoiceFlow both with and without rectified flow on two out of the 80 mel dimensions in Figure \ref{fig:traj}.
+To provide an intuition on the impact of rectified flow, we visualized some sampling trajectories of ***VoiceFlow*** both with and without rectified flow on two out of the 80 mel dimensions in Figure \ref{fig:traj}.
 The trajectory of GradTTS is also shown here.
 Then, the visual contrast between the straight and curving trajectories leaves no doubt on the efficacy of using rectified flow in TTS models.
 
 ## 6·结论
 
-In this study, we proposed VoiceFlow, a TTS acoustic model based on rectified flow matching, that achieves better efficiency and speed-quality tradeoff than diffusion-based acoustic models.
+In this study, we proposed ***VoiceFlow***, a TTS acoustic model based on rectified flow matching, that achieves better efficiency and speed-quality tradeoff than diffusion-based acoustic models.
 Although belonging to the ODE generative model family, flow matching with the rectified flow can automatically straighten its sampling trajectory, thus greatly lowering the sampling cost for generating high-quality speech.
-Experiments on single and multi-speaker benchmarks proved the competence of VoiceFlow across different number of sampling steps, and the effectiveness of flow rectification for efficient generation.
+Experiments on single and multi-speaker benchmarks proved the competence of ***VoiceFlow*** across different number of sampling steps, and the effectiveness of flow rectification for efficient generation.
 We believe that the potential of flow matching in TTS research has yet to be discovered, including areas such as automatic alignment search and voice conversion.
 
 ## 参考文献
