--- a/Models/FlowMatching/2025.06.20_RapFlow-TTS.md
+++ b/Models/FlowMatching/2025.06.20_RapFlow-TTS.md
@@ -362,7 +362,7 @@ As a result, ***RapFlow-TTS*** outperformed existing ODE-based models and effect
 [^Karras2022EDM]: [EDM](../Diffusion/2022.06.01_EDM.md)
 [^Lipman2022FM]: [Flow Matching](2022.10.06_Flow_Matching_for_Generative_Modeling.md)
 [^Tong2023CFM]: [CFM](2023.02.01_Conditional_Flow_Matching.md)
-[^Guo2024VoiceFlow]: [VoiceFlow](../Diffusion/2023.09.10_VoiceFlow.md)
+[^Guo2024VoiceFlow]: [VoiceFlow](2023.09.10_VoiceFlow.md)
 [^Liu2022RectifiedFlow]: [Rectified Flow](2022.09.07_RectifiedFlow.md)
 [^Song2023ConsistencyModel]: [Consistency Model](../Diffusion/2023.03.02_ConsistencyModel.md)
 [^Ye2023CoMoSpeech]: [CoMoSpeech](../Diffusion/2023.05.11_CoMoSpeech.md)
