--- a/Models/FlowMatching/2023.09.10_VoiceFlow.md
+++ b/Models/FlowMatching/2023.09.10_VoiceFlow.md
@@ -276,3 +276,15 @@ We believe that the potential of flow matching in TTS research has yet to be dis
 [^Du2023TN-VQTTS]: [TN-VQTTS](../E2E/2023.08.24_TN-VQTTS.md)
 [^Popov2021Grad-TTS]: [Grad-TTS](../Acoustic/2021.05.13_Grad-TTS.md)
 [^Liu2022DiffSinger]: [DiffSinger](../SVS/2021.05.06_Diffsinger.md)
+[^Liu2023DiffVoice]: [DiffVoice](../Diffusion/2023.04.23_DiffVoice.md)
+[^Du2023UniCATS]: [UniCATS](../Diffusion/2023.06.13_UniCATS.md)
+[^Kim2022Guided-TTS]: [Guided-TTS](../TTS2_Acoustic/2021.11.23_Guided-TTS.md)
+[^Guo2023EmoDiff]: [EmoDiff](../Diffusion/2022.11.17_EmoDiff.md)
+[^Tae2022EdiTTS]: [EdiTTS](../Diffusion/2021.10.06_EdiTTS.md)
+[^Dhariwal2021GuidedDiffusion]: [Diffusion Models Beat GANs on Image Synthesis](../_Basis/2021.05.11_Guided_Diffusion.md)
+[^Vovk2022FastGrad-TTS]: [Fast Grad-TTS](../Acoustic/2022.09.18_Fast_Grad-TTS.md)
+[^Popov2022DiffVC]: [DiffVC](../Voice_Conversion/2021.09.28_Diff-VC.md)
+[^Salimans2022Progressive]: [Progressive Distillation](../Diffusion/2022.02.01_Progressive_Distillation.md)
+[^Xiao2022DenoisingDiffusionGAN]: [Denoising Diffusion GAN](../_Basis/2021.12.15_Denoising_Diffusion_GAN.md)
+[^Huang2022FastDiff]: [FastDiff](../Vocoder/2022.04.21_FastDiff.md)
+[^Lam2022BDDM]: [BDDM](../Diffusion/2022.03.25_BDDM.md)
