--- a/Models/FlowMatching/2023.09.10_VoiceFlow.md
+++ b/Models/FlowMatching/2023.09.10_VoiceFlow.md
@@ -288,3 +288,19 @@ We believe that the potential of flow matching in TTS research has yet to be dis
 [^Xiao2022DenoisingDiffusionGAN]: [Denoising Diffusion GAN](../_Basis/2021.12.15_Denoising_Diffusion_GAN.md)
 [^Huang2022FastDiff]: [FastDiff](../Vocoder/2022.04.21_FastDiff.md)
 [^Lam2022BDDM]: [BDDM](../Diffusion/2022.03.25_BDDM.md)
+[^Huang2022ProDiff]: [ProDiff](../Diffusion/2022.07.13_ProDiff.md)
+[^Song2021DDIM]: [DDIM](../Diffusion/2020.10.06_DDIM.md)
+[^Chen2023LightGrad]: [LightGrad](../Diffusion/2023.08.31_LightGrad.md)
+[^Lu2022DPM-Solver]: [DPM-Solver](../Diffusion/2022.06.02_DPM-Solver.md)
+[^Ye2023CoMoSpeech]: [CoMoSpeech](../Diffusion/2023.05.11_CoMoSpeech.md)
+[^Song2023ConsistencyModel]: [Consistency Model](../Diffusion/2023.03.02_ConsistencyModel.md)
+[^Lipman2022FM]: [Flow Matching](2022.10.06_Flow_Matching_for_Generative_Modeling.md)
+[^Liu2022RectifiedFlow]: [Rectified Flow](2022.09.07_RectifiedFlow.md)
+[^Tong2023CFM]: [CFM](2023.02.01_Conditional_Flow_Matching.md)
+[^Le2023VoiceBox]: [VoiceBox](../Diffusion/2023.06.23_Voicebox.md)
+[^Liu2023LinDiff]: [LinDiff](../Vocoder/2023.06.09_LinDiff.md)
+[^Ito2017LJSpeech]: [LJSpeech](../../Datasets/2017.07.05_LJSpeech.md)
+[^Zen2019LibriTTS]: [LibriTTS](../../Datasets/2019.04.05_LibriTTS.md)
+[^Povey2011Kaldi]: [Kaldi](../Toolkits/2011.00.00_Kaidi.md)
+[^Kong2020HiFi-GAN]: [HiFi-GAN](../Vocoder/2020.10.12_HiFi-GAN.md)
+[^Lo2019MOSNet]: [MOSNet](../../Evaluations/MOSNet.md)
