--- a/Models/FlowMatching/2025.06.20_RapFlow-TTS.md
+++ b/Models/FlowMatching/2025.06.20_RapFlow-TTS.md
@@ -360,17 +360,17 @@ As a result, ***RapFlow-TTS*** outperformed existing ODE-based models and effect
 [^Park2024DEX-TTS]: [DEX-TTS](../Diffusion/2024.06.27_DEX-TTS.md)
 [^Song2020Score]: [Score-Based Generative Modeling through SDE](../Diffusion/2020.11.26_Score-Based_Generative_Modeling_through_SDE.md)
 [^Karras2022EDM]: [EDM](../Diffusion/2022.06.01_EDM.md)
-[^Lipman2022FM]: [Flow Matching](2022.10.06_Flow_Matching_for_Generative_Modeling.md)
-[^Tong2023CFM]: [CFM](2023.02.01_Conditional_Flow_Matching.md)
+[^Lipman2022FM]: [Flow Matching](_2022.10.06_Flow_Matching.md)
+[^Tong2023CFM]: [CFM](_2023.02.01_Conditional_Flow_Matching.md)
 [^Guo2024VoiceFlow]: [VoiceFlow](2023.09.10_VoiceFlow.md)
-[^Liu2022RectifiedFlow]: [Rectified Flow](2022.09.07_RectifiedFlow.md)
+[^Liu2022RectifiedFlow]: [Rectified Flow](_2022.09.07_RectifiedFlow.md)
 [^Song2023ConsistencyModel]: [Consistency Model](../Diffusion/2023.03.02_ConsistencyModel.md)
 [^Ye2023CoMoSpeech]: [CoMoSpeech](../Diffusion/2023.05.11_CoMoSpeech.md)
 [^Mehta2024Matcha-TTS]: [Matcha-TTS](../Diffusion/2023.09.06_Matcha-TTS.md)
-[^Yang2024ConsistencyFM]: [Consistency Flow Matching](2024.07.02_Consistency_Flow_Matching.md)
+[^Yang2024ConsistencyFM]: [Consistency Flow Matching](_2024.07.02_Consistency_Flow_Matching.md)
 [^Song2023iCT]: [iCT](../Diffusion/2023.10.22_iCT.md)
 [^Kim2025SimpleReFlow]: [Simple ReFlow](2024.10.10_SimpleReFlow.md)
-[^Lee2024ReFlow++]: [ReFlow++](2024.05.30_ReFlow++.md)
+[^Lee2024ReFlow++]: [ReFlow++](_2024.05.30_ReFlow++.md)
 [^Mao2017LSGAN]: [LSGAN](../_Basis/2016.11.13_LSGAN.md)
 [^Salimans2016ImprovedGAN]: [Improved Techniques for Training GANs](../_Basis/2016.06.10_ImprovedGAN.md)
 [^Li2022StyleTTS]: [StyleTTS](../TTS2_Acoustic/2022.05.30_StyleTTS.md)
