--- a/Models/FlowMatching/2023.09.10_VoiceFlow.md
+++ b/Models/FlowMatching/2023.09.10_VoiceFlow.md
@@ -297,9 +297,9 @@ We believe that the potential of flow matching in TTS research has yet to be dis
 [^Lu2022DPM-Solver]: [DPM-Solver](../Diffusion/2022.06.02_DPM-Solver.md)
 [^Ye2023CoMoSpeech]: [CoMoSpeech](../Diffusion/2023.05.11_CoMoSpeech.md)
 [^Song2023ConsistencyModel]: [Consistency Model](../Diffusion/2023.03.02_ConsistencyModel.md)
-[^Lipman2022FM]: [Flow Matching](2022.10.06_Flow_Matching_for_Generative_Modeling.md)
-[^Liu2022RectifiedFlow]: [Rectified Flow](2022.09.07_RectifiedFlow.md)
-[^Tong2023CFM]: [CFM](2023.02.01_Conditional_Flow_Matching.md)
+[^Lipman2022FM]: [Flow Matching](_2022.10.06_Flow_Matching.md)
+[^Liu2022RectifiedFlow]: [Rectified Flow](_2022.09.07_RectifiedFlow.md)
+[^Tong2023CFM]: [CFM](_2023.02.01_Conditional_Flow_Matching.md)
 [^Le2023VoiceBox]: [VoiceBox](../Diffusion/2023.06.23_Voicebox.md)
 [^Liu2023LinDiff]: [LinDiff](../Vocoder/2023.06.09_LinDiff.md)
 [^Ito2017LJSpeech]: [LJSpeech](../../Datasets/2017.07.05_LJSpeech.md)
